# heart_beat_monitor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prepare.sh
client/: CMakeLists.txt
client/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: crypto.h  helpers.h  models.h
lib/src/: crypto.cpp
server/: CMakeLists.txt
server/src/: main.cpp
